--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
   "name": "w-jsonview-tree",
-  "version": "1.0.16",
+  "version": "1.0.17",
   "description": "A wrapper for json-view.",
   "main": "dist/w-jsonview-tree.umd.js",
   "dependencies": {},
   "devDependencies": {
-    "@babel/cli": "^7.5.5",
-    "@babel/core": "^7.5.5",
-    "@babel/node": "^7.5.5",
+    "@babel/cli": "^7.6.4",
+    "@babel/core": "^7.6.4",
+    "@babel/node": "^7.6.3",
     "@babel/plugin-proposal-export-default-from": "^7.5.2",
-    "@babel/plugin-transform-runtime": "^7.5.5",
-    "@babel/polyfill": "^7.4.4",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/register": "^7.5.5",
-    "@babel/runtime": "^7.5.5",
-    "core-js": "^3.2.1",
+    "@babel/plugin-transform-runtime": "^7.6.2",
+    "@babel/polyfill": "^7.6.0",
+    "@babel/preset-env": "^7.6.3",
+    "@babel/register": "^7.6.2",
+    "@babel/runtime": "^7.6.3",
+    "core-js": "^3.3.2",
     "docdash": "^1.1.1",
-    "eslint": "^6.3.0",
+    "eslint": "^6.5.1",
     "eslint-config-standard": "^14.1.0",
     "eslint-friendly-formatter": "^4.0.1",
-    "eslint-loader": "^3.0.0",
+    "eslint-loader": "^3.0.2",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-promise": "^4.2.1",
@@ -27,18 +27,19 @@
     "eslint-plugin-vue": "^5.2.3",
     "gh-pages": "^2.1.1",
     "jsdoc": "^3.6.3",
-    "jsdoc-vuejs": "^3.0.3",
-    "mocha": "^6.2.0",
-    "rollup": "^1.20.3",
+    "jsdoc-vuejs": "^3.0.4",
+    "mocha": "^6.2.1",
+    "rollup": "^1.23.1",
     "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-babel-minify": "^9.0.0",
+    "rollup-plugin-babel-minify": "^9.1.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-postcss": "^2.0.3",
     "rollup-plugin-replace": "^2.2.0",
+    "rollup-plugin-terser": "^5.1.2",
     "rollup-plugin-vue": "^5.0.1",
     "vue-template-compiler": "^2.6.10",
-    "w-package-tools": "^1.0.2"
+    "w-package-tools": "^1.0.9"
   },
   "scripts": {
     "test": "./node_modules/.bin/mocha --require @babel/register",
